--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - "--certificatesResolvers.myresolver.acme.dnsChallenge.resolvers=1.1.1.1:53,1.0.0.1:53"
       - "--certificatesresolvers.myresolver.acme.email=${EMAIL:?Set $$EMAIL in env}"
       - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+      - "--serverstransport.insecureskipverify"
       # Uncomment below lines for testing
       #- "--certificatesresolvers.myresolver.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
       #- "--log.level=DEBUG"
@@ -30,7 +31,7 @@ services:
       # The HTTPS port
       - "443:443"
       # The Web UI (enabled by --api.insecure=true)
-      - "8080:8080"
+      - "8081:8080"
     volumes:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
@@ -90,3 +91,25 @@ services:
       - "traefik.http.routers.home-assistant.rule=Host(`ha.${HOST_URL:?Set $$HOST_URL in env}`)"
       - "traefik.http.routers.home-assistant.entrypoints=websecure"
       - "traefik.http.routers.home-assistant.tls=true"
+
+  unifi:
+    image: jacobalberty/unifi:stable
+    volumes:
+      - ./appdata/unifi:/unifi
+    environment:
+      - TZ='America/Chicago'
+      - UNIFI_UID=1000
+      - UNIFI_GID=1000
+    ports:
+      - "8080:8080"
+      # - "8443:8443"
+      - "3478:3478/udp"
+      - "10001:10001/udp"
+    restart: unless-stopped
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.unifi.rule=Host(`unifi.${HOST_URL:?Set $$HOST_URL in env}`)"
+      - "traefik.http.routers.unifi.entrypoints=websecure"
+      - "traefik.http.routers.unifi.tls=true"
+      - "traefik.http.services.unifi.loadbalancer.server.port=8443"
+      - "traefik.http.services.unifi.loadbalancer.server.scheme=https"
