Access Zwave USB stick by id

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
     ports:
       - "8123:8123"
     devices:
-      - /dev/ttyACM0
+      - "/dev/serial/by-id/usb-0658_0200-if00:/dev/ttyACM0"
     environment:
       - TZ='America/Chicago'
     restart: unless-stopped
