Add plex to traefik

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,12 @@ services:
       - ./appdata/plex/transcode:/transcode
       - /mnt/storage/movies:/movies
       - /mnt/storage/tv:/tv
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.plex.rule=Host(`plex.${HOST_URL:?Set $$HOST_URL in env}`)"
+      - "traefik.http.routers.plex.entrypoints=websecure"
+      - "traefik.http.routers.plex.tls=true"
+      - "traefik.http.services.plex.loadbalancer.server.port=32400"
 
   radarr:
     image: linuxserver/radarr
