--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,18 @@ services:
       - "traefik.http.routers.nzbget.tls=true"
       - "traefik.http.routers.nzbget.middlewares=auth"
 
+  nzbhydra2:
+    image: linuxserver/nzbhydra2
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ='America/Chicago'
+    volumes:
+      - ./appdata/nzbhydra2:/config
+    ports:
+      - 5076:5076
+    restart: unless-stopped
+
   plex:
     image: plexinc/pms-docker
     restart: unless-stopped
