Auto-restart traefik

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
   reverse-proxy:
     # The official v2 Traefik docker image
     image: traefik:v2.2
+    restart: unless-stopped
     command:
       - "--api.insecure=true"
       - "--providers.docker=true"
