Upgrade to Unifi Controller version 6

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -227,7 +227,7 @@ services:
       - "traefik.http.routers.tautulli.tls=true"
 
   unifi:
-    image: jacobalberty/unifi:stable
+    image: jacobalberty/unifi:stable-6
     volumes:
       - ./appdata/unifi:/unifi
     environment:
